Issue #5829: complex('1e-500') shouldn't raise an exception. Also fix some confusing indentation.